added cygwin support (still requires MSVC resource.h)

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -3,5 +3,5 @@ INCLUDES = -I$(top_srcdir)
 noinst_PROGRAMS = setup
 
 setup_SOURCES = setup.c
-setup_LDADD = -L/d/libusb-pbatard/libusb/.libs -lusb-1.0 -L../lib/.libs -lusb-wdi
+setup_LDADD = -L../../libusb-pbatard/libusb/.libs -lusb-1.0 -L../lib/.libs -lusb-wdi
 
