various improvements and fixes
sh: Bad file number, can't execute installer, example named setup requires UAC elevation,
linker input file unused because linking not done, cygwin1.dll not found, WOW64 error

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,8 @@
 INCLUDES = -I$(top_srcdir)
 
-noinst_PROGRAMS = setup
+noinst_PROGRAMS = setdrv
 
-setup_SOURCES = setup.c
-setup_LDADD = -L../../libusb-pbatard/libusb/.libs -lusb-1.0 -L../lib/.libs -lusb-wdi
-
+setdrv_SOURCES = setdrv.c
+# static ensures that the exe can be shared as a standalone, and still allow driver installation
+setdrv_LDFLAGS = $(AM_LDFLAGS) -static
+setdrv_LDADD = -L../../libusb-pbatard/libusb/.libs -lusb-1.0 -L../lib/.libs -lusb-wdi
