--- a/installer/Makefile.am
+++ b/installer/Makefile.am
@@ -3,5 +3,6 @@ INCLUDES = -I$(top_srcdir)
 noinst_PROGRAMS = installer
 
 installer_SOURCES = installer.h installer.c
+installer_LDFLAGS = $(AM_LDFLAGS) -mno-cygwin
 installer_LDADD = -lsetupapi -lole32
 
