--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,3 +1,4 @@
+BUILT_SOURCES = resource.h
 lib_LTLIBRARIES = libusb-wdi.la
 
 LIB_SRC = resource.h infs.h usbi.h installer.h installer_library.h installer_library.c
@@ -10,7 +11,8 @@ EXTRA_DIST = $(LIB_SRC)
 #	$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(RC) $(RCFLAGS) -i $< -o $@
 #endif
 
-libusb_wdi_la_CFLAGS = $(VISIBILITY_CFLAGS) $(AM_CFLAGS) -L../../libusb-pbatard/libusb/.libs -lusb-1.0 
+libusb_wdi_la_CFLAGS = $(VISIBILITY_CFLAGS) $(AM_CFLAGS)
+libusb_wdi_la_LIBADD = -L../../libusb-pbatard/libusb/.libs -lusb-1.0
 libusb_wdi_la_SOURCES = $(LIB_SRC)
 
 resource.h:
@@ -18,8 +20,3 @@ resource.h:
 
 clean-local:
 	-rm -rf resource.h
-
-
-#???
-#hdrdir = $(includedir)/libusb-1.0
-#hdr_HEADERS = libusb.h
