--- a/examples/setdrv_2008.vcproj
+++ b/examples/setdrv_2008.vcproj
@@ -65,7 +65,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="setupapi.lib difxapi.lib libusb-1.0.lib"
+				AdditionalDependencies="setupapi.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="D:\libusb-pbatard\$(PlatformName)\$(ConfigurationName)\lib"
 				GenerateDebugInformation="true"
@@ -142,7 +142,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="setupapi.lib difxapi.lib libusb-1.0.lib"
+				AdditionalDependencies="setupapi.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="D:\libusb-pbatard\$(PlatformName)\$(ConfigurationName)\lib"
 				GenerateDebugInformation="true"
@@ -219,7 +219,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="setupapi.lib difxapi.lib libusb-1.0.lib"
+				AdditionalDependencies="setupapi.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="D:\libusb-pbatard\$(PlatformName)\$(ConfigurationName)\lib"
 				GenerateDebugInformation="false"
@@ -298,7 +298,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="setupapi.lib difxapi.lib libusb-1.0.lib"
+				AdditionalDependencies="setupapi.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="D:\libusb-pbatard\$(PlatformName)\$(ConfigurationName)\lib"
 				GenerateDebugInformation="false"
