renamed to libwdi (part 2)

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ AUTOMAKE_OPTIONS = dist-bzip2 no-dist-gzip
 ACLOCAL_AMFLAGS = -I m4
 #DISTCLEANFILES = ChangeLog libusb-1.0.pc
 #EXTRA_DIST = TODO PORTING
-SUBDIRS = embedder installer libwdi
+SUBDIRS = libwdi
 
 if BUILD_EXAMPLES
 SUBDIRS += examples
