--- a/libwdi/Makefile.am
+++ b/libwdi/Makefile.am
@@ -1,7 +1,29 @@
-BUILT_SOURCES = resource.h
-lib_LTLIBRARIES = libwdi.la
+INCLUDES = -I$(top_srcdir)
 
+BUILT_SOURCES = resource.h
+noinst_PROGRAMS = embedder installer_x86 installer_x64
+lib_LTLIBRARIES = libwdi.la
 LIB_SRC = resource.h logging.h usbi.h installer.h libwdi.h logging.c libwdi.c
+
+# TODO: warn if _X86 or _X64 is missing
+if OPT_M32
+M32 = -m32
+endif
+if OPT_M64
+M64 = -m64
+endif
+
+embedder_SOURCES = embedder.c
+
+installer_x86_SOURCES = installer.h installer.c
+installer_x86_LDFLAGS = $(AM_LDFLAGS) -mno-cygwin -static
+installer_x86_CFLAGS = $(AM_CFLAGS) $(M32)
+installer_x86_LDADD = -lsetupapi -lole32
+
+installer_x64_SOURCES = installer.h installer.c
+installer_x64_LDFLAGS = $(AM_LDFLAGS) -mno-cygwin -static
+installer_x64_CFLAGS = $(AM_CFLAGS) $(M64)
+installer_x64_LDADD = -lsetupapi -lole32
 
 EXTRA_DIST = $(LIB_SRC)
 
@@ -15,8 +37,8 @@ libwdi_la_CFLAGS = $(VISIBILITY_CFLAGS) $(AM_CFLAGS)
 libwdi_la_LIBADD = -lsetupapi -lole32
 libwdi_la_SOURCES = $(LIB_SRC)
 
-resource.h:
-	../embedder/embedder.exe resource.h
+resource.h: embedder.exe installer_x86.exe installer_x64.exe
+	./embedder.exe resource.h
 
 clean-local:
 	-rm -rf resource.h
