added XP support + cygwin "improvements"

--- a/configure.ac
+++ b/configure.ac
@@ -20,7 +20,7 @@ AC_ARG_WITH(ddkdir,
 	DDK_DIR=$withval,
 	DDK_DIR="C:/WinDDK/7600.16385.0")
 # NB: I found the hard way that cygwin doesn't like multiple files to be provided on multiple lines - YOU HAVE BEEN WARNED!
-AC_CHECK_FILES([$DDK_DIR/redist/wdf/amd64/WdfCoInstaller01009.dll	$DDK_DIR/redist/winusb/amd64/winusbcoinstaller2.dll $DDK_DIR/redist/wdf/x86/WdfCoInstaller01009.dll $DDK_DIR/redist/winusb/x86/winusbcoinstaller2.dll],,
+AC_CHECK_FILES([$DDK_DIR/redist/wdf/amd64/WdfCoInstaller01009.dll	$DDK_DIR/redist/winusb/amd64/winusbcoinstaller2.dll $DDK_DIR/redist/wdf/x86/WdfCoInstaller01009.dll $DDK_DIR/redist/winusb/x86/winusbcoinstaller2.dll $DDK_DIR/redist/DIFx/DIFxAPI/amd64/DIFxAPI.dll $DDK_DIR/redist/DIFx/DIFxAPI/x86/DIFxAPI.dll],,
 	[AC_MSG_ERROR([the WinUSB reditributables from the Microsoft DDK
 configure: error: must be provided to compile this library (--with-ddkdir)])])
 AC_DEFINE_UNQUOTED([DDK_DIR], ["$DDK_DIR"], [DDK directory])
@@ -50,6 +50,7 @@ case $host in
 		AC_MSG_ERROR([you must ensure that -mno-cygwin is available on cygwin])
 	fi
 	CFLAGS="${save_CFLAGS}"	
+	CC="gcc -mno-cygwin"
 	;;	
 *)
 	AC_MSG_ERROR([unsupported development environment])
