--- a/libwdi/installer_x86_2008.vcproj
+++ b/libwdi/installer_x86_2008.vcproj
@@ -61,6 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="newdev.lib setupapi.lib"
 				OutputFile="$(OutDir)\installer_x86.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
@@ -135,6 +136,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="newdev.lib setupapi.lib"
 				OutputFile="$(OutDir)\installer_x86.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="false"
