--- a/libwdi/Makefile.am
+++ b/libwdi/Makefile.am
@@ -12,7 +12,7 @@ noinst_EXES += installer_x86.exe
 installer_x86_SOURCES = installer.h installer.c
 installer_x86_CFLAGS = -m32 $(NO_CYGWIN) $(AM_CFLAGS) $(M32)
 installer_x86_LDFLAGS = $(NO_CYGWIN) $(AM_LDFLAGS) -static
-installer_x86_LDADD = -lsetupapi -lole32
+installer_x86_LDADD = -lsetupapi -lnewdev
 endif
 
 if OPT_M64
@@ -22,7 +22,7 @@ installer_x64_CC = gcc $(NO_CYGWIN)
 installer_x64_SOURCES = installer.h installer.c
 installer_x64_CFLAGS = -m64 -D_WIN64 $(NO_CYGWIN) $(AM_CFLAGS)
 installer_x64_LDFLAGS = $(NO_CYGWIN) $(AM_LDFLAGS) -static
-installer_x64_LDADD = -lsetupapi -lole32
+installer_x64_LDADD = -lsetupapi -lnewdev
 endif
 
 embedder_SOURCES = embedder.c
