minor fixes (renaming, removed unwanted params, etc)

--- a/examples/setdrv_gui.rc
+++ b/examples/setdrv_gui.rc
@@ -34,7 +34,7 @@ BEGIN
     LTEXT           "USB Device",IDC_STATIC,14,7,47,11
     COMBOBOX        IDC_COMBO1,8,20,397,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     GROUPBOX        "Info",IDC_STATIC,7,42,399,125
-    LISTBOX         IDC_ATTRIBUTES,17,57,377,102,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
+    LISTBOX         IDC_INFO,17,57,377,102,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
 END
 
 
