--- a/examples/setdrv_2008.vcproj
+++ b/examples/setdrv_2008.vcproj
@@ -67,7 +67,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="setupapi.lib newdev.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="D:\libusb-pbatard\$(PlatformName)\$(ConfigurationName)\lib"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)$(ProjectName).pdb"
 				SubSystem="1"
@@ -144,7 +144,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="setupapi.lib newdev.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="D:\libusb-pbatard\$(PlatformName)\$(ConfigurationName)\lib"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)$(ProjectName).pdb"
 				SubSystem="1"
@@ -221,7 +221,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="setupapi.lib newdev.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="D:\libusb-pbatard\$(PlatformName)\$(ConfigurationName)\lib"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="false"
 				SubSystem="1"
 				OptimizeReferences="2"
@@ -300,7 +300,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="setupapi.lib newdev.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="D:\libusb-pbatard\$(PlatformName)\$(ConfigurationName)\lib"
+				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="false"
 				SubSystem="1"
 				OptimizeReferences="2"
