added hotplug detection and new device creation

--- a/examples/setdrv_gui.rc
+++ b/examples/setdrv_gui.rc
@@ -26,27 +26,31 @@ LANGUAGE LANG_ENGLISH, SUBLANG_NEUTRAL
 // Dialog
 //
 
-MAIN_DIALOG DIALOGEX 0, 0, 416, 251
-STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
-EXSTYLE WS_EX_TOOLWINDOW | WS_EX_WINDOWEDGE | WS_EX_STATICEDGE | WS_EX_APPWINDOW
+MAIN_DIALOG DIALOGEX 0, 0, 416, 278
+STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE | WS_EX_APPWINDOW
 CAPTION "WDI SetDrv GUI"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    COMBOBOX        IDC_DEVICELIST,18,20,379,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Info",IDC_STATIC,8,121,399,125
-    LISTBOX         IDC_INFO,19,134,377,102,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
-    GROUPBOX        "USB Device",IDC_STATIC,7,8,400,108
-    EDITTEXT        IDC_VID,295,40,38,14,ES_UPPERCASE | ES_READONLY | WS_DISABLED
-    EDITTEXT        IDC_PID,357,40,38,14,ES_UPPERCASE | ES_READONLY | WS_DISABLED
-    CONTROL         "List Only Driverless Devices",IDC_DRIVERLESSONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,18,41,103,10
-    LTEXT           "VID:",IDC_STATIC,278,42,15,8
-    LTEXT           "PID:",IDC_STATIC,342,42,15,8
-    EDITTEXT        IDC_DRIVER,193,40,75,14,ES_READONLY | WS_DISABLED
-    LTEXT           "Current driver:",IDC_STATIC,139,42,51,8
-    PUSHBUTTON      "Install Driver",IDC_INSTALL,149,81,112,25
-    CONTROL         "Edit Device Name",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,18,56,71,10
-    LTEXT           "Extract Folder:",IDC_STATIC,139,59,51,8
-    EDITTEXT        IDC_FOLDER,193,57,115,14,ES_AUTOHSCROLL
+    COMBOBOX        IDC_DEVICELIST,17,31,273,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "Info",IDC_STATIC,8,148,399,125
+    LISTBOX         IDC_INFO,20,160,377,102,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
+    GROUPBOX        "USB Device",IDC_STATIC,7,8,400,128
+    EDITTEXT        IDC_VID,292,31,27,14,ES_UPPERCASE | WS_DISABLED
+    EDITTEXT        IDC_PID,320,31,27,14,ES_UPPERCASE | WS_DISABLED
+    CONTROL         "List Only Driverless Devices",IDC_DRIVERLESSONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,52,103,10
+    LTEXT           "VID:",IDC_STATIC,293,21,15,8
+    LTEXT           "PID:",IDC_STATIC,322,21,15,8
+    EDITTEXT        IDC_DRIVER,193,50,75,14,ES_READONLY | WS_DISABLED
+    LTEXT           "Current driver:",IDC_STATIC,139,52,51,8
+    PUSHBUTTON      "Install Driver",IDC_INSTALL,149,92,112,25
+    CONTROL         "Edit Device Name",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,66,71,10
+    LTEXT           "Extract Folder:",IDC_STATIC,139,70,51,8
+    EDITTEXT        IDC_FOLDER,193,68,115,14,ES_AUTOHSCROLL
+    CONTROL         "Create Device (Not Plugged)",IDC_CREATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,81,107,10
+    LTEXT           "Description:",IDC_STATIC,19,21,39,8
+    LTEXT           "MI:",IDC_STATIC,352,21,12,8
+    EDITTEXT        IDC_MI,348,31,16,14,ES_UPPERCASE | WS_DISABLED
 END
 
 
@@ -100,7 +104,7 @@ GUIDELINES DESIGNINFO
 BEGIN
     "MAIN_DIALOG", DIALOG
     BEGIN
-        BOTTOMMARGIN, 246
+        BOTTOMMARGIN, 273
     END
 END
 #endif    // APSTUDIO_INVOKED
