added timestamps checks in embedder

--- a/libwdi/libwdi_2008.vcproj
+++ b/libwdi/libwdi_2008.vcproj
@@ -299,6 +299,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\installer.h"
+				>
+			</File>
+			<File
 				RelativePath=".\libwdi.h"
 				>
 			</File>
